# simplemath_n1

./: README.rst  pyproject.toml  simplemath_v2.rs
simplemath/: __init__.py  fancy.py  mutils.py  pyadvanced.py  simple.py  smlib.py
simplemath/examples/: __init__.py  examples_advanced.py  examples_fancy.py  examples_simple.py
simplemath_khapp.egg-info/: PKG-INFO  SOURCES.txt
